ch5/k8s-bootstrap/bootstrap/patches/argocd-application-controller-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-application-controller-network-policy
$patch: delete
