ch5/k8s-bootstrap/bootstrap/patches/argocd-dex-server-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-dex-server-network-policy 
$patch: delete
