ch5/k8s-bootstrap/bootstrap/patches/argocd-redis-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-redis-network-policy
$patch: delete
